fix padding for accordion(overflow in between accordion and footer)

--- a/css/master.css
+++ b/css/master.css
@@ -35,6 +35,10 @@
   background-color: transparent;
 }
 
+.accordion-main{
+  padding-bottom: 50px;
+}
+
 /*.panel{
   color: white;
 }*/
@@ -223,7 +227,7 @@ a:hover {
   bottom:0;
   width: 100%;
   height: 100px;
-  background-color: rgba(211, 211, 211, 0.3);
+  background-color: rgba(211, 211, 211, 0.5);
   color: #999;
   color: rgba(255,255,255,.5);
 }
